
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]

  *) Removed the heartbeat message in DTLS feature, as it has very
     little usage and doesn't seem to fulfill a valuable purpose.
     [Richard Levitte]

  *) Changed the output of 'openssl {digestname} < file' to display the
     digest name in its output.
     [Richard Levitte]

  *) Added a new generic trace API which provides support for enabling
     instrumentation through trace output. This feature is mainly intended
     as an aid for developers and is disabled by default. To utilize it,
     OpenSSL needs to be configured with the `enable-trace` option.

     If the tracing API is enabled, the application can activate trace output
     by registering BIOs as trace channels for a number of tracing and debugging
     categories.

     The 'openssl' application has been expanded to enable any of the types
     available via environment variables defined by the user, and serves as
     one possible example on how to use this functionality.
     [Richard Levitte & Matthias St. Pierre]

  *) Added build tests for C++.  These are generated files that only do one
     thing, to include one public OpenSSL head file each.  This tests that
     the public header files can be usefully included in a C++ application.

     This test isn't enabled by default.  It can be enabled with the option
     'enable-buildtest-c++'.
     [Richard Levitte]

  *) Add Single Step KDF (EVP_KDF_SS) to EVP_KDF.
     [Shane Lontis]

  *) Add KMAC to EVP_MAC.
     [Shane Lontis]

  *) Added property based algorithm implementation selection framework to
     the core.
     [Paul Dale]

  *) Added SCA hardening for modular field inversion in EC_GROUP through